secondary commit scss

--- a/scss/components/_partners.scss
+++ b/scss/components/_partners.scss
@@ -98,3 +98,15 @@ svg {
 		}
 	}
 }
+.partner-item:nth-child(1) .partner-icon {
+	background-color: #ff4e50;
+}
+.partner-item:nth-child(2) .partner-icon {
+	background-color: #1cd7ad;
+}
+.partner-item:nth-child(3) .partner-icon {
+	background-color: #ffa507;
+}
+.partner-item:nth-child(4) .partner-icon {
+	background-color: #4e73db;
+}
