--- a/css/main.css
+++ b/css/main.css
@@ -241,23 +241,17 @@ body main {
     margin: 0 auto;
   }
 }
-.hero {
+.header-hero {
   line-height: 37px;
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
-.hero__title {
+
+.header-hero__title {
   line-height: normal;
   font-size: 30px;
   display: inline-block;
@@ -265,28 +259,30 @@ body main {
   width: 307px;
   text-align: center;
 }
-.hero__subtitle {
-  font-family: "Roboto", sans-serif;
+
+.header-hero__subtitle {
+  font-family: Roboto;
   font-size: 18px;
   font-weight: 300;
   line-height: 21px;
-  letter-spacing: 0;
+  letter-spacing: 0px;
   text-align: center;
   margin-bottom: 17px;
   text-transform: none;
 }
-.hero__button {
+
+.header-hero__button {
   background-color: #ff4e50;
-  border: 0;
+  border: 0px;
   padding: 13px 38px;
   border-radius: 30px;
   font-weight: 700;
   font-size: 14px;
-  margin: 17px 0 136px;
+  margin-top: 17px;
+  margin-bottom: 136px;
   color: #fff;
   text-align: center;
   line-height: normal;
-  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -372,4 +368,19 @@ svg {
     -ms-flex-preferred-size: calc((100% - 105px) / 4);
         flex-basis: calc((100% - 105px) / 4);
   }
+}
+.partner-item:nth-child(1) .partner-icon {
+  background-color: #ff4e50;
+}
+
+.partner-item:nth-child(2) .partner-icon {
+  background-color: #1cd7ad;
+}
+
+.partner-item:nth-child(3) .partner-icon {
+  background-color: #ffa507;
+}
+
+.partner-item:nth-child(4) .partner-icon {
+  background-color: #4e73db;
 }/*# sourceMappingURL=main.css.map */
