--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,49 +1,44 @@
 @use '../utils/variables' as *;
 @use '../utils/placeholders' as *;
-.hero {
+.header-hero {
 	line-height: 37px;
 	text-align: center;
-	color: $white;
+	color: #fff;
 	text-transform: uppercase;
-	display: flex;
-	flex-direction: column;
 	align-items: center;
-
-	&__title {
-		line-height: normal;
-		font-size: 30px;
-		display: inline-block;
-		margin-bottom: 12px;
-		width: 307px;
-		text-align: center;
-	}
-
-	&__subtitle {
-		font-family: $secondary-font;
-		font-size: 18px;
-		font-weight: 300;
-		line-height: 21px;
-		letter-spacing: 0;
-		text-align: center;
-		margin-bottom: 17px;
-		text-transform: none;
-	}
-
-	&__button {
-		background-color: $color-primary;
-		border: 0;
-		padding: 13px 38px;
-		border-radius: 30px;
-		font-weight: 700;
-		font-size: 14px;
-		margin: 17px 0 136px;
-		color: $white;
-		text-align: center;
-		line-height: normal;
-		cursor: pointer;
-	}
 }
-@media screen and (min-width: $breakpoint-small) {
+.header-hero__title {
+	line-height: normal;
+	font-size: 30px;
+	display: inline-block;
+	margin-bottom: 12px;
+	width: 307px;
+	text-align: center;
+}
+.header-hero__subtitle {
+	font-family: Roboto;
+	font-size: 18px;
+	font-weight: 300;
+	line-height: 21px;
+	letter-spacing: 0px;
+	text-align: center;
+	margin-bottom: 17px;
+	text-transform: none;
+}
+.header-hero__button {
+	background-color: #ff4e50;
+	border: 0px;
+	padding: 13px 38px;
+	border-radius: 30px;
+	font-weight: 700;
+	font-size: 14px;
+	margin-top: 17px;
+	margin-bottom: 136px;
+	color: #fff;
+	text-align: center;
+	line-height: normal;
+}
+@media screen and (min-width: 768px) {
 	.header-hero__title {
 		font-size: 52px;
 		width: 507px;
