--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,21 +1,19 @@
 @use '../utils/variables' as *;
-
 .container {
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 8px;
-	padding-right: 8px;
+	margin: 0 auto;
+	padding: 0 8px;
 	min-width: 320px;
 	max-width: $breakpoint-large;
 }
-@media screen and (min-width: $breakpoint-small) {
+
+@media (min-width: $breakpoint-small) {
 	.container {
 		width: 570px;
 	}
 }
-@media screen and (min-width: $breakpoint-mid) {
+
+@media (min-width: $breakpoint-mid) {
 	.container {
 		width: 920px;
 	}
 }
-
