--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -2,27 +2,19 @@
 
 body {
 	font-family: $main-font;
-	line-height: normal;
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-	min-height: 100vh;
 
 	main {
 		flex: 1 0 auto;
 	}
 
 	.container {
-		margin-left: auto;
-		margin-right: auto;
-		padding-left: 8px;
-		padding-right: 8px;
+		margin: 0 auto;
+		padding: 0 8px;
 		min-width: 320px;
 		max-width: $breakpoint-large;
 	}
 }
 
-/* ====================== header ========================== */
 label {
 	display: block;
 	height: 30px;
@@ -33,19 +25,18 @@ label {
 	span::before,
 	span::after {
 		content: '';
+		position: absolute;
+		right: 0;
 		display: block;
 		width: 25px;
 		height: 2px;
 		background: $text-color;
-		position: absolute;
-		right: 0;
 		transition: 0.3s;
 	}
 
 	span::before {
 		top: -8px;
 	}
-
 	span::after {
 		top: 8px;
 	}
