--- a/scss/components/_partners.scss
+++ b/scss/components/_partners.scss
@@ -1,4 +1,5 @@
 @use '../utils/variables' as *;
+
 .partner {
 	&__title {
 		width: 290px;
@@ -20,22 +21,6 @@
 		text-align: center;
 		margin: 0 auto;
 
-		&:nth-child(1) .partner-icon {
-			background-color: $color-primary;
-		}
-
-		&:nth-child(2) .partner-icon {
-			background-color: $color-secondary;
-		}
-
-		&:nth-child(3) .partner-icon {
-			background-color: $color-accent;
-		}
-
-		&:nth-child(4) .partner-icon {
-			background-color: $color-blue;
-		}
-
 		&__img {
 			position: relative;
 			width: 125px;
@@ -47,7 +32,7 @@
 	&-description {
 		color: $partner-description-color;
 		text-align: center;
-		font-family: $secondary-font;
+		font-family: Roboto;
 		font-size: 14px;
 		font-weight: 300;
 	}
@@ -61,7 +46,7 @@
 		align-items: center;
 		width: 40px;
 		height: 40px;
-		padding: 7px 8px 8px 8px;
+		padding: 7px 8px 8px;
 		border-radius: 50%;
 		border: 4px solid $white;
 	}
@@ -75,7 +60,7 @@
 	}
 
 	&-button {
-		background-color: transparent;
+		background: none;
 		border: 2px solid $color-primary;
 		min-height: 43px;
 		min-width: 228px;
@@ -88,30 +73,49 @@
 		justify-content: center;
 		align-items: center;
 		margin: 37px auto 72px;
+		cursor: pointer;
 	}
 }
 
-svg {
-	color: white;
+.partner-item:nth-child(1) .partner-icon {
+	background-color: $color-primary;
 }
-@media screen and (min-width: $breakpoint-small) {
+.partner-item:nth-child(2) .partner-icon {
+	background-color: $color-secondary;
+}
+.partner-item:nth-child(3) .partner-icon {
+	background-color: $color-accent;
+}
+.partner-item:nth-child(4) .partner-icon {
+	background-color: $color-blue;
+}
+
+svg {
+	color: $white;
+}
+
+@media (min-width: $breakpoint-small) {
 	.partner__title {
 		width: 440px;
 	}
+
 	.partner-list {
 		flex-direction: row;
 		flex-wrap: wrap;
 		gap: 55px;
 	}
+
 	.partner-item {
 		flex-basis: calc((100% - 53px * 2) / 2);
 	}
 }
-@media screen and (min-width: $breakpoint-mid) {
+
+@media (min-width: $breakpoint-mid) {
 	.partner-list {
 		flex-wrap: nowrap;
 		gap: 35px;
 	}
+
 	.partner-item {
 		flex-basis: calc((100% - 35px * 3) / 4);
 	}
