--- a/css/main.css
+++ b/css/main.css
@@ -165,16 +165,20 @@ label span::after {
           align-items: center;
 }
 .header-hero__title {
+  line-height: normal;
   font-size: 30px;
   display: inline-block;
   margin-bottom: 12px;
   width: 307px;
+  text-align: center;
 }
 .header-hero__subtitle {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 300;
   line-height: 21px;
+  letter-spacing: 0;
+  text-align: center;
   margin-bottom: 17px;
   text-transform: none;
 }
@@ -185,27 +189,29 @@ label span::after {
   border-radius: 30px;
   font-weight: 700;
   font-size: 14px;
-  margin: 17px 0 136px;
+  margin-top: 17px;
+  margin-bottom: 136px;
   color: #fff;
-  cursor: pointer;
+  text-align: center;
+  line-height: normal;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .header {
     background-image: url(../../images/tablet/tablet-header.jpg);
   }
 }
-@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192dpi), (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .header {
     background-image: url(../../images/tablet/tablet-header@2x.jpg);
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .header {
     background-image: url(../../images/desktop/desk-header.jpg);
   }
 }
-@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 192dpi), (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .header {
     background-image: url(../../images/desktop/desk-header@2x.jpg);
   }
