--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -8,10 +8,12 @@
 	align-items: center;
 
 	&__title {
+		line-height: normal;
 		font-size: 30px;
 		display: inline-block;
 		margin-bottom: 12px;
 		width: 307px;
+		text-align: center;
 	}
 
 	&__subtitle {
@@ -19,6 +21,8 @@
 		font-size: 18px;
 		font-weight: 300;
 		line-height: 21px;
+		letter-spacing: 0;
+		text-align: center;
 		margin-bottom: 17px;
 		text-transform: none;
 	}
@@ -30,30 +34,33 @@
 		border-radius: 30px;
 		font-weight: 700;
 		font-size: 14px;
-		margin: 17px 0 136px;
+		margin-top: 17px;
+		margin-bottom: 136px;
 		color: $white;
-		cursor: pointer;
+		text-align: center;
+		line-height: normal;
 	}
 }
 
+// Header background media queries
 .header {
-	@media (min-width: $breakpoint-small) {
+	@media screen and (min-width: $breakpoint-small) {
 		background-image: url(../../images/tablet/tablet-header.jpg);
 	}
 
-	@media (min-width: $breakpoint-small) and (min-device-pixel-ratio: 2),
-		(min-width: $breakpoint-small) and (min-resolution: 192dpi),
-		(min-width: $breakpoint-small) and (min-resolution: 2dppx) {
+	@media screen and (min-width: $breakpoint-small) and (min-device-pixel-ratio: 2),
+		screen and (min-width: $breakpoint-small) and (min-resolution: 192dpi),
+		screen and (min-width: $breakpoint-small) and (min-resolution: 2dppx) {
 		background-image: url(../../images/tablet/tablet-header@2x.jpg);
 	}
 
-	@media (min-width: 1200px) {
+	@media screen and (min-width: 1200px) {
 		background-image: url(../../images/desktop/desk-header.jpg);
 	}
 
-	@media (min-width: 1200px) and (min-device-pixel-ratio: 2),
-		(min-width: 1200px) and (min-resolution: 192dpi),
-		(min-width: 1200px) and (min-resolution: 2dppx) {
+	@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+		screen and (min-width: 1200px) and (min-resolution: 192dpi),
+		screen and (min-width: 1200px) and (min-resolution: 2dppx) {
 		background-image: url(../../images/desktop/desk-header@2x.jpg);
 	}
 }
