--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -2,14 +2,17 @@
 
 body {
 	font-family: $main-font;
+	line-height: normal;
 
 	main {
 		flex: 1 0 auto;
 	}
 
 	.container {
-		margin: 0 auto;
-		padding: 0 8px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-left: 8px;
+		padding-right: 8px;
 		min-width: 320px;
 		max-width: $breakpoint-large;
 	}
@@ -25,18 +28,19 @@ label {
 	span::before,
 	span::after {
 		content: '';
-		position: absolute;
-		right: 0;
 		display: block;
 		width: 25px;
 		height: 2px;
 		background: $text-color;
+		position: absolute;
+		right: 0;
 		transition: 0.3s;
 	}
 
 	span::before {
 		top: -8px;
 	}
+
 	span::after {
 		top: 8px;
 	}
