--- a/css/main.css
+++ b/css/main.css
@@ -109,14 +109,14 @@ label span::after {
   max-width: 1600px;
   width: 100vw;
   margin: 0 auto 63px;
-  background-image: url(../../images/mobile/mobile-header.jpg);
+  background-image: url(../images/mobile/mobile-header.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .header {
-    background-image: url(../../images/mobile/mobile-header@2x.jpg);
+    background-image: url(../images/mobile/mobile-header@2x.jpg);
   }
 }
 .header-menu {
