--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ a {
 body {
   font-family: "Montserrat", sans-serif;
   line-height: normal;
+  width: 1440px;
 }
 body main {
   -webkit-box-flex: 1;
