--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,17 +1,6 @@
-// Colors
-$white: #fff;
-$color-primary: #ff4e50; // buttons, partner icon
-$color-secondary: #1cd7ad; // partner-item 2
-$color-accent: #ffa507; // partner-item 3
-$color-blue: #4e73db; // partner-item 4
-$text-color: #333; // headings
-$partner-description-color: #666; // partner-description
-
-// Breakpoints
-$breakpoint-small: 768px;
-$breakpoint-mid: 1024px;
-$breakpoint-large: 1440px;
-
-// Fonts
+$main-color: #FFFFFF;
+$titles-color: #333333;
+$text-color: #666666;
+$button-color: #FF4E50;
 $main-font: 'Montserrat', sans-serif;
-$secondary-font: 'Roboto', sans-serif;
+$second-font: 'Roboto', sans-serif;
