--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,48 +1,19 @@
 @use '../utils/variables' as *;
-
+@use '../utils/placeholders' as *;
 body {
 	font-family: $main-font;
-	line-height: normal;
-
-	main {
-		flex: 1 0 auto;
-	}
-
-	.container {
-		margin-left: auto;
-		margin-right: auto;
-		padding-left: 8px;
-		padding-right: 8px;
-		min-width: 320px;
-		max-width: $breakpoint-large;
-	}
+	color: $main-color;
+	font-weight: 700;
+	font-size: 14px;
 }
 
-/* ====================== header ========================== */
-label {
-	display: block;
-	height: 30px;
-	position: relative;
-	top: 15px;
-
-	span,
-	span::before,
-	span::after {
-		content: '';
-		display: block;
-		width: 25px;
-		height: 2px;
-		background: $text-color;
-		position: absolute;
-		right: 0;
-		transition: 0.3s;
-	}
-
-	span::before {
-		top: -8px;
-	}
-
-	span::after {
-		top: 8px;
-	}
+.container {
+	min-width: 320px;
+	max-width: 940px;
+	padding-inline: 15px;
+	margin-inline: auto;
+}
+.hero {
+	min-height: 552px;
+	max-height: 702px;
 }
