--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,70 +1,28 @@
 @use '../utils/variables' as *;
-
+@use '../utils/placeholders' as *;
 .header {
-	margin: 0 auto;
-	max-width: 1600px;
-	width: 100vw;
-	background-image: url('../images/mobile/mobile-header.jpg');
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+	position: relative;
 
-	@media (min-device-pixel-ratio: 2),
-		(min-resolution: 192dpi),
-		(min-resolution: 2dppx) {
-		background-image: url('../images/mobile/mobile-header.jpg');
-	}
-
-	&-menu {
+	&__container {
+		position: absolute;
+		top: 19px;
+		left: 50%;
+		transform: translateX(-50%);
 		display: flex;
+		gap: 112px;
 		flex-direction: column;
-		justify-content: space-between;
-		height: 175px;
 
-		&__items {
-			margin-top: 19px;
-			text-align: center;
+		@media (min-width: 768px) {
+			position: absolute;
+			top: 36px;
+			width: 670px;
+			flex-direction: row-reverse;
+			align-items: center;
+			justify-content: space-between;
 		}
 
-		&__link {
-			font-size: 14px;
-			color: $white;
-			border-radius: 17px;
-			padding: 7px 17px;
-
-			&--border {
-				border: 2px solid $white;
-			}
+		@media (min-width: 1140px) {
+			width: 940px;
 		}
-
-		&__logo {
-			font-size: 18px;
-			font-weight: 700;
-			line-height: 22px;
-			letter-spacing: 1px;
-			color: $white;
-			display: block;
-			text-align: center;
-			margin-bottom: 22px;
-		}
-	}
-}
-@media screen and (min-width: $breakpoint-small) {
-	.header-menu__logo {
-		font-size: 20px;
-	}
-	.header-hero__title {
-		font-size: 52px;
-		width: 507px;
-	}
-	.header-hero__subtitle {
-		font-size: 24px;
-	}
-	.header-menu {
-		display: flex;
-		flex-direction: row-reverse;
-		justify-content: space-evenly;
-		align-items: baseline;
-		margin: 0 auto;
 	}
 }
