--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,66 +1,56 @@
 @use '../utils/variables' as *;
+@use '../utils/placeholders' as *;
+.hero {
+	background-image: url(../images/hero/background-mobile@1x.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	@extend %flex-center;
+	@media (min-device-pixel-ratio: 2),
+		(min-resolution: 192dpi),
+		(min-resolution: 2dppx) {
+		background-image: url(../images/hero/background-mobile@2x.jpg);
+	}
+	@media screen and (min-width: 768px) {
+		background-image: url(../images/hero/background-tablet@1x.jpg);
 
-.header-hero {
-	line-height: 37px;
-	text-align: center;
-	color: $white;
-	text-transform: uppercase;
-	align-items: center;
+		@media (min-device-pixel-ratio: 2),
+			(min-resolution: 192dpi),
+			(min-resolution: 2dppx) {
+			background-image: url(../images/hero/background-tablet@2x.jpg);
+		}
+	}
+	@media screen and (min-width: 1200px) {
+		background-image: url(../images/hero/background-desctop@1x.jpg);
+
+		@media (min-device-pixel-ratio: 2),
+			(min-resolution: 192dpi),
+			(min-resolution: 2dppx) {
+			background-image: url(../images/hero/background-desctop@2x.jpg);
+		}
+	}
 
 	&__title {
-		line-height: normal;
+		padding-top: 22px;
 		font-size: 30px;
-		display: inline-block;
-		margin-bottom: 12px;
-		width: 307px;
+		text-transform: uppercase;
 		text-align: center;
+		padding-bottom: 12px;
+		@media (min-width: 768px) {
+			padding-bottom: 36px;
+			font-size: 52px;
+		}
 	}
 
 	&__subtitle {
-		font-family: $secondary-font;
-		font-size: 18px;
 		font-weight: 300;
-		line-height: 21px;
-		letter-spacing: 0;
+		font-size: 18px;
 		text-align: center;
-		margin-bottom: 17px;
-		text-transform: none;
-	}
-
-	&__button {
-		background-color: $color-primary;
-		border: 0;
-		padding: 13px 38px;
-		border-radius: 30px;
-		font-weight: 700;
-		font-size: 14px;
-		margin-top: 17px;
-		margin-bottom: 136px;
-		color: $white;
-		text-align: center;
-		line-height: normal;
-	}
-}
-
-// Header background media queries
-.header {
-	@media screen and (min-width: $breakpoint-small) {
-		background-image: url('../images/tablet/tablet-header.jpg');
-	}
-
-	@media screen and (min-width: $breakpoint-small) and (min-device-pixel-ratio: 2),
-		screen and (min-width: $breakpoint-small) and (min-resolution: 192dpi),
-		screen and (min-width: $breakpoint-small) and (min-resolution: 2dppx) {
-		background-image: url('../images/tablet/tablet-header@2x.jpg');
-	}
-
-	@media screen and (min-width: 1200px) {
-		background-image: url('../images/desktop/desk-header.jpg');
-	}
-
-	@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-		screen and (min-width: 1200px) and (min-resolution: 192dpi),
-		screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-		background-image: url('../images/desktop/desk-header@2x.jpg');
+		font-family: $second-font;
+		padding-bottom: 19px;
+		@media (min-width: 768px) {
+			font-size: 24px;
+			padding-bottom: 33px;
+		}
 	}
 }
